=== HEAD

* In the instance_hooks plugin, (before|after)_*_hook instance methods now return self (jeremyevans)

* Handle NaN, Infinity, and -Infinity floats on PostgreSQL (kf8a, jeremyevans) (#444)

* Support an :sslmode option when using the postgres adapter with the pg driver (jeremyevans)

* Add Database#create_schema and #drop_schema to the shared postgres adapter (tkellen, jeremyevans) (#440)

* Add Database#supports_savepoints_in_prepared_transactions?, false on MySQL 5.5 (jeremyevans) (#437)

* Support an identifier output method in the mysql2 adapter (jeremyevans)

* Make foreign key creation work on MySQL with InnoDB engine without specifying :key option (jeremyevans)

* Allow disabling use of sudo with SUDO='' when running the rake install/uninstall tasks (jeremyevans) (#433)

=== 3.32.0 (2012-02-01)

* Make serialization_modification_detection plugin work correctly with new objects and after saving existing objects (jeremyevans) (#432)

* Make refreshes after model creation clear the deserialized values in the serialization plugin (jeremyevans)

* Add Dataset#update_ignore on MySQL, for using UPDATE IGNORE in queries (danielb2) (#429)

* Allow select_map/select_order_map to take both a column argument and a block (jeremyevans)

* Fix virtual row block handling in select_map/select_order_map if block returns an array (jeremyevans) (#428)

* Add Sequel.empty_array_handle_nulls setting, can be set to false for possible better performance on some databases (jeremyevans)

* Change exclude(:b=>[]) to not return rows where b is NULL (jeremyevans) (#427)

* Support ActiveModel 3.2 in the active_model plugin, by adding support for to_partial_path (jeremyevans)

* Fix metadata methods (e.g. tables) on Oracle when custom identifier input methods are used (jeremyevans)

* Fix Database#indexes on DB2 (jeremyevans)

* Make DateTime/Time columns with Sequel::CURRENT_TIMESTAMP default values use timestamp column on MySQL (jeremyevans)
